# meilisearch-importer

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/scripts/: check-release.sh  is-latest-release.sh
.github/workflows/: publish-binaries.yml  release.yml
src/: byte_count.rs  csv.rs  main.rs  mime.rs  nd_json.rs
