[package]
name = "meilisearch-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
byte-unit = { version = "5.1.4", features = ["byte", "serde"] }
csv = "1.3.0"
exponential-backoff = "1.2.0"
flate2 = "1.0"
indicatif = "0.17.8"
serde_json = { version = "1.0.114", features = ["preserve_order"] }
structopt = "0.3.26"
ureq = "2.9.6"
