[package]
name = "meilisearch-importer"
version = "0.1.0"
repository = "https://github.com/meilisearch/meilisearch-importer"
edition = "2021"

[dependencies]
byte-unit = { version = "4.0.14", default-features = false, features = ["std", "serde"] }
csv = "1.1.6"
flate2 = "1.0"
indicatif = "0.17.1"
reqwest = "0.11.12"
serde_json = { version = "1.0.114", features = ["preserve_order"] }
structopt = "0.3.26"
tokio = { version = "1.21.2", features = ["full"] }
tokio-retry = "0.3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
