[package]
name = "meilisearch-importer"
description = "A tool to import massive datasets into Meilisearch by sending them in batches"
version = "0.2.4"
repository = "https://github.com/meilisearch/meilisearch-importer"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
byte-unit = { version = "5.1.4", features = ["byte", "serde"] }
clap = { version = "4.5.3", features = ["derive"] }
csv = "1.3.0"
exponential-backoff = "1.2.0"
flate2 = "1.0"
indicatif = "0.17.8"
rayon = "1.10.0"
serde_json = { version = "1.0.114", features = ["preserve_order"] }
ureq = "2.9.6"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
